Fix: wp-latest-posts feature image placement
- The feature images were recreated on the server side with new
resolutions, in order to fix the blurry images were not suitable for
production.

This commit realigns the images to make sure that their centers are the
part that is visible when cropping occurs

--- a/themes/basakbeykoz/react-src/src/styles/vendors-extensions/wordpress/wp-block-latest-posts/_featured-image.scss
+++ b/themes/basakbeykoz/react-src/src/styles/vendors-extensions/wordpress/wp-block-latest-posts/_featured-image.scss
@@ -2,10 +2,12 @@
 
 $home--posts-y-px: get-component-property('home', 'posts-y-px');
 
+/// Styles the feature image in each li element of wp-block-latest-posts
 @mixin featured-image($type, $img-height-px) {
   display: flex;
   grid-area: image;
-  justify-content: center;
+  justify-items: center;
+  align-items: center;
   border-radius: #{get-gap(2/3)};
   height: #{$img-height-px};
   overflow: hidden;
